# Loggistic

./: .gitignore  Cargo.toml
src/: boot.rs  config.rs  main.rs
src/provider/: api.rs  factory.rs  logstash.rs  mod.rs
src/reader/: api.rs  factory.rs  mod.rs  simple_file.rs
